project.output
Terminals unused in grammar

    LEKSH


Grammar

    0 $accept: input $end

    1 input: ε
    2      | input '\n'
    3      | main '\n'
    4      | input '\n' main '\n'

    5 main: KYRIO_MEROS '(' ')' '{' stmt_list '}'

    6 stmt_list: stmt
    7          | stmt_list ';' stmt

    8 condition: expr '<' expr
    9          | expr '>' expr
   10          | expr NEQ expr
   11          | expr EQ expr
   12          | expr LEQ expr
   13          | expr GEQ expr

   14 expr: expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '=' expr
   19     | '(' expr ')'
   20     | '-' expr
   21     | NUMBER
   22     | GRAPSE '(' var_list ')'

   23 stmt: AKER var_list
   24     | PRAG var_list
   25     | DIABASE '(' var_list ')'
   26     | EPESTREPSE expr ';'
   27     | OSO '(' condition ')' '{' stmt_list ';' '}'
   28     | AN '(' condition ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}'
   29     | GIA '(' expr ';' condition ';' expr ')' '{' stmt_list ';' '}'
   30     | expr

   31 var_list: expr
   32         | expr ',' var_list
   33         | ';'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 2 3 4
    '(' (40) 5 19 22 25 27 28 29
    ')' (41) 5 19 22 25 27 28 29
    '*' (42) 16
    '+' (43) 14
    ',' (44) 32
    '-' (45) 15 20
    '/' (47) 17
    ';' (59) 7 26 27 28 29 33
    '<' (60) 8
    '=' (61) 18
    '>' (62) 9
    '{' (123) 5 27 28 29
    '}' (125) 5 27 28 29
    error (256)
    NUMBER (258) 21
    NEQ (259) 10
    LEQ (260) 12
    GEQ (261) 13
    EQ (262) 11
    AKER (263) 23
    PRAG (264) 24
    LEKSH (265)
    OSO (266) 27
    GIA (267) 29
    AN (268) 28
    ALLIWS (269) 28
    KYRIO_MEROS (270) 5
    GRAPSE (271) 22
    DIABASE (272) 25
    EPESTREPSE (273) 26
    UMINUS (274)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    input (35)
        on left: 1 2 3 4
        on right: 0 2 4
    main (36)
        on left: 5
        on right: 3 4
    stmt_list (37)
        on left: 6 7
        on right: 5 7 27 28 29
    condition (38)
        on left: 8 9 10 11 12 13
        on right: 27 28 29
    expr (39)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 8 9 10 11 12 13 14 15 16 17 18 19 20 26 29 30 31 32
    stmt (40)
        on left: 23 24 25 26 27 28 29 30
        on right: 6 7
    var_list (41)
        on left: 31 32 33
        on right: 22 23 24 25 32


State 0

    0 $accept: • input $end

    KYRIO_MEROS  shift, and go to state 1

    $default  reduce using rule 1 (input)

    input  go to state 2
    main   go to state 3


State 1

    5 main: KYRIO_MEROS • '(' ')' '{' stmt_list '}'

    '('  shift, and go to state 4


State 2

    0 $accept: input • $end
    2 input: input • '\n'
    4      | input • '\n' main '\n'

    $end  shift, and go to state 5
    '\n'  shift, and go to state 6


State 3

    3 input: main • '\n'

    '\n'  shift, and go to state 7


State 4

    5 main: KYRIO_MEROS '(' • ')' '{' stmt_list '}'

    ')'  shift, and go to state 8


State 5

    0 $accept: input $end •

    $default  accept


State 6

    2 input: input '\n' •
    4      | input '\n' • main '\n'

    KYRIO_MEROS  shift, and go to state 1

    $default  reduce using rule 2 (input)

    main  go to state 9


State 7

    3 input: main '\n' •

    $default  reduce using rule 3 (input)


State 8

    5 main: KYRIO_MEROS '(' ')' • '{' stmt_list '}'

    '{'  shift, and go to state 10


State 9

    4 input: input '\n' main • '\n'

    '\n'  shift, and go to state 11


State 10

    5 main: KYRIO_MEROS '(' ')' '{' • stmt_list '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22

    stmt_list  go to state 23
    expr       go to state 24
    stmt       go to state 25


State 11

    4 input: input '\n' main '\n' •

    $default  reduce using rule 4 (input)


State 12

   21 expr: NUMBER •

    $default  reduce using rule 21 (expr)


State 13

   23 stmt: AKER • var_list

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    ';'     shift, and go to state 26

    expr      go to state 27
    var_list  go to state 28


State 14

   24 stmt: PRAG • var_list

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    ';'     shift, and go to state 26

    expr      go to state 27
    var_list  go to state 29


State 15

   27 stmt: OSO • '(' condition ')' '{' stmt_list ';' '}'

    '('  shift, and go to state 30


State 16

   29 stmt: GIA • '(' expr ';' condition ';' expr ')' '{' stmt_list ';' '}'

    '('  shift, and go to state 31


State 17

   28 stmt: AN • '(' condition ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}'

    '('  shift, and go to state 32


State 18

   22 expr: GRAPSE • '(' var_list ')'

    '('  shift, and go to state 33


State 19

   25 stmt: DIABASE • '(' var_list ')'

    '('  shift, and go to state 34


State 20

   26 stmt: EPESTREPSE • expr ';'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 35


State 21

   20 expr: '-' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 36


State 22

   19 expr: '(' • expr ')'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 37


State 23

    5 main: KYRIO_MEROS '(' ')' '{' stmt_list • '}'
    7 stmt_list: stmt_list • ';' stmt

    '}'  shift, and go to state 38
    ';'  shift, and go to state 39


State 24

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   30 stmt: expr •

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 30 (stmt)


State 25

    6 stmt_list: stmt •

    $default  reduce using rule 6 (stmt_list)


State 26

   33 var_list: ';' •

    $default  reduce using rule 33 (var_list)


State 27

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   31 var_list: expr •
   32         | expr • ',' var_list

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44
    ','  shift, and go to state 45

    $default  reduce using rule 31 (var_list)


State 28

   23 stmt: AKER var_list •

    $default  reduce using rule 23 (stmt)


State 29

   24 stmt: PRAG var_list •

    $default  reduce using rule 24 (stmt)


State 30

   27 stmt: OSO '(' • condition ')' '{' stmt_list ';' '}'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    condition  go to state 46
    expr       go to state 47


State 31

   29 stmt: GIA '(' • expr ';' condition ';' expr ')' '{' stmt_list ';' '}'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 48


State 32

   28 stmt: AN '(' • condition ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    condition  go to state 49
    expr       go to state 47


State 33

   22 expr: GRAPSE '(' • var_list ')'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    ';'     shift, and go to state 26

    expr      go to state 27
    var_list  go to state 50


State 34

   25 stmt: DIABASE '(' • var_list ')'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    ';'     shift, and go to state 26

    expr      go to state 27
    var_list  go to state 51


State 35

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   26 stmt: EPESTREPSE expr • ';'

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44
    ';'  shift, and go to state 52


State 36

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   20     | '-' expr •

    $default  reduce using rule 20 (expr)


State 37

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   19     | '(' expr • ')'

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44
    ')'  shift, and go to state 53


State 38

    5 main: KYRIO_MEROS '(' ')' '{' stmt_list '}' •

    $default  reduce using rule 5 (main)


State 39

    7 stmt_list: stmt_list ';' • stmt

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22

    expr  go to state 24
    stmt  go to state 54


State 40

   18 expr: expr '=' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 55


State 41

   14 expr: expr '+' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 56


State 42

   15 expr: expr '-' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 57


State 43

   16 expr: expr '*' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 58


State 44

   17 expr: expr '/' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 59


State 45

   32 var_list: expr ',' • var_list

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    ';'     shift, and go to state 26

    expr      go to state 27
    var_list  go to state 60


State 46

   27 stmt: OSO '(' condition • ')' '{' stmt_list ';' '}'

    ')'  shift, and go to state 61


State 47

    8 condition: expr • '<' expr
    9          | expr • '>' expr
   10          | expr • NEQ expr
   11          | expr • EQ expr
   12          | expr • LEQ expr
   13          | expr • GEQ expr
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    NEQ  shift, and go to state 62
    LEQ  shift, and go to state 63
    GEQ  shift, and go to state 64
    EQ   shift, and go to state 65
    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44
    '<'  shift, and go to state 66
    '>'  shift, and go to state 67


State 48

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   29 stmt: GIA '(' expr • ';' condition ';' expr ')' '{' stmt_list ';' '}'

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44
    ';'  shift, and go to state 68


State 49

   28 stmt: AN '(' condition • ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}'

    ')'  shift, and go to state 69


State 50

   22 expr: GRAPSE '(' var_list • ')'

    ')'  shift, and go to state 70


State 51

   25 stmt: DIABASE '(' var_list • ')'

    ')'  shift, and go to state 71


State 52

   26 stmt: EPESTREPSE expr ';' •

    $default  reduce using rule 26 (stmt)


State 53

   19 expr: '(' expr ')' •

    $default  reduce using rule 19 (expr)


State 54

    7 stmt_list: stmt_list ';' stmt •

    $default  reduce using rule 7 (stmt_list)


State 55

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   18     | expr '=' expr •

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 18 (expr)


State 56

   14 expr: expr • '+' expr
   14     | expr '+' expr •
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 14 (expr)


State 57

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   15     | expr '-' expr •
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 15 (expr)


State 58

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   16     | expr '*' expr •
   17     | expr • '/' expr
   18     | expr • '=' expr

    $default  reduce using rule 16 (expr)


State 59

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   17     | expr '/' expr •
   18     | expr • '=' expr

    $default  reduce using rule 17 (expr)


State 60

   32 var_list: expr ',' var_list •

    $default  reduce using rule 32 (var_list)


State 61

   27 stmt: OSO '(' condition ')' • '{' stmt_list ';' '}'

    '{'  shift, and go to state 72


State 62

   10 condition: expr NEQ • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 73


State 63

   12 condition: expr LEQ • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 74


State 64

   13 condition: expr GEQ • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 75


State 65

   11 condition: expr EQ • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 76


State 66

    8 condition: expr '<' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 77


State 67

    9 condition: expr '>' • expr

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 78


State 68

   29 stmt: GIA '(' expr ';' • condition ';' expr ')' '{' stmt_list ';' '}'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    condition  go to state 79
    expr       go to state 47


State 69

   28 stmt: AN '(' condition ')' • '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}'

    '{'  shift, and go to state 80


State 70

   22 expr: GRAPSE '(' var_list ')' •

    $default  reduce using rule 22 (expr)


State 71

   25 stmt: DIABASE '(' var_list ')' •

    $default  reduce using rule 25 (stmt)


State 72

   27 stmt: OSO '(' condition ')' '{' • stmt_list ';' '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22

    stmt_list  go to state 81
    expr       go to state 24
    stmt       go to state 25


State 73

   10 condition: expr NEQ expr •
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 10 (condition)


State 74

   12 condition: expr LEQ expr •
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 12 (condition)


State 75

   13 condition: expr GEQ expr •
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 13 (condition)


State 76

   11 condition: expr EQ expr •
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 11 (condition)


State 77

    8 condition: expr '<' expr •
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 8 (condition)


State 78

    9 condition: expr '>' expr •
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 9 (condition)


State 79

   29 stmt: GIA '(' expr ';' condition • ';' expr ')' '{' stmt_list ';' '}'

    ';'  shift, and go to state 82


State 80

   28 stmt: AN '(' condition ')' '{' • stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22

    stmt_list  go to state 83
    expr       go to state 24
    stmt       go to state 25


State 81

    7 stmt_list: stmt_list • ';' stmt
   27 stmt: OSO '(' condition ')' '{' stmt_list • ';' '}'

    ';'  shift, and go to state 84


State 82

   29 stmt: GIA '(' expr ';' condition ';' • expr ')' '{' stmt_list ';' '}'

    NUMBER  shift, and go to state 12
    GRAPSE  shift, and go to state 18
    '-'     shift, and go to state 21
    '('     shift, and go to state 22

    expr  go to state 85


State 83

    7 stmt_list: stmt_list • ';' stmt
   28 stmt: AN '(' condition ')' '{' stmt_list • ';' '}' ALLIWS '{' stmt_list ';' '}'

    ';'  shift, and go to state 86


State 84

    7 stmt_list: stmt_list ';' • stmt
   27 stmt: OSO '(' condition ')' '{' stmt_list ';' • '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22
    '}'         shift, and go to state 87

    expr  go to state 24
    stmt  go to state 54


State 85

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '=' expr
   29 stmt: GIA '(' expr ';' condition ';' expr • ')' '{' stmt_list ';' '}'

    '='  shift, and go to state 40
    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44
    ')'  shift, and go to state 88


State 86

    7 stmt_list: stmt_list ';' • stmt
   28 stmt: AN '(' condition ')' '{' stmt_list ';' • '}' ALLIWS '{' stmt_list ';' '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22
    '}'         shift, and go to state 89

    expr  go to state 24
    stmt  go to state 54


State 87

   27 stmt: OSO '(' condition ')' '{' stmt_list ';' '}' •

    $default  reduce using rule 27 (stmt)


State 88

   29 stmt: GIA '(' expr ';' condition ';' expr ')' • '{' stmt_list ';' '}'

    '{'  shift, and go to state 90


State 89

   28 stmt: AN '(' condition ')' '{' stmt_list ';' '}' • ALLIWS '{' stmt_list ';' '}'

    ALLIWS  shift, and go to state 91


State 90

   29 stmt: GIA '(' expr ';' condition ';' expr ')' '{' • stmt_list ';' '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22

    stmt_list  go to state 92
    expr       go to state 24
    stmt       go to state 25


State 91

   28 stmt: AN '(' condition ')' '{' stmt_list ';' '}' ALLIWS • '{' stmt_list ';' '}'

    '{'  shift, and go to state 93


State 92

    7 stmt_list: stmt_list • ';' stmt
   29 stmt: GIA '(' expr ';' condition ';' expr ')' '{' stmt_list • ';' '}'

    ';'  shift, and go to state 94


State 93

   28 stmt: AN '(' condition ')' '{' stmt_list ';' '}' ALLIWS '{' • stmt_list ';' '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22

    stmt_list  go to state 95
    expr       go to state 24
    stmt       go to state 25


State 94

    7 stmt_list: stmt_list ';' • stmt
   29 stmt: GIA '(' expr ';' condition ';' expr ')' '{' stmt_list ';' • '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22
    '}'         shift, and go to state 96

    expr  go to state 24
    stmt  go to state 54


State 95

    7 stmt_list: stmt_list • ';' stmt
   28 stmt: AN '(' condition ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list • ';' '}'

    ';'  shift, and go to state 97


State 96

   29 stmt: GIA '(' expr ';' condition ';' expr ')' '{' stmt_list ';' '}' •

    $default  reduce using rule 29 (stmt)


State 97

    7 stmt_list: stmt_list ';' • stmt
   28 stmt: AN '(' condition ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' • '}'

    NUMBER      shift, and go to state 12
    AKER        shift, and go to state 13
    PRAG        shift, and go to state 14
    OSO         shift, and go to state 15
    GIA         shift, and go to state 16
    AN          shift, and go to state 17
    GRAPSE      shift, and go to state 18
    DIABASE     shift, and go to state 19
    EPESTREPSE  shift, and go to state 20
    '-'         shift, and go to state 21
    '('         shift, and go to state 22
    '}'         shift, and go to state 98

    expr  go to state 24
    stmt  go to state 54


State 98

   28 stmt: AN '(' condition ')' '{' stmt_list ';' '}' ALLIWS '{' stmt_list ';' '}' •

    $default  reduce using rule 28 (stmt)
